---------------------------------------------------------------------------------------------------
Version: 0.6.8
Date: 23.06.2024
  Features:
    - added chinese locale (PR #72)
    - added interface to register new list of surfaces for gaia buildings (I #56)
    - scaled rocket return products to input amounts of f.e. fish
    - included ExoticIndustriesColorFix from Ooferine into main mod
  Changes:
    - updated RU locale (PR #72)
    - removed crafting limitation from drone
  Bugfixes:
    - fixed an issue with K2 More Realistic Weapons setting (I #69)
    - added fix for wrong initial destinations on rocket silos
    - fixed with mining metalworks 4 
    - fixed K2 issue with returning dolphin guns 
---------------------------------------------------------------------------------------------------
Version: 0.6.7
Date: 27.04.2024
  Changes:
    - added K2 as an optional dependency to ensure loading order with other mods
  Bugfixes:
    - fixed an issue from 0.6.6
---------------------------------------------------------------------------------------------------
Version: 0.6.6
Date: 26.04.2024
  Bugfixes:
    - fixed an issue with tech costs in K2
    - fixed an issue with pistol ammon and K2 when specific mods are present
---------------------------------------------------------------------------------------------------
Version: 0.6.5
Date: 17.04.2024
  Bugfixes:
    - fixed an issue with K2 pumps
    - fixed an issue with K2 satellite returns
---------------------------------------------------------------------------------------------------
Version: 0.6.3
Date: 16.04.2024
  Bugfixes:
    - fixed an issue with mods that techs without effects
---------------------------------------------------------------------------------------------------
Version: 0.6.2
Date: 13.04.2024
  Features:
    - added a matter tech for bio matter (K2)
  Changes:
    - adjusted K2s equipment to better fit in progression
    - added more whitelists for selection tools (PR #67)